fix dreamlist card spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+}
 .border-radius {
   border-radius: var(--border-radius);
 }
@@ -145,15 +153,13 @@ body {
   color: var(--light)
 }
 .main {
-  outline-color: darkblue;
+  outline-color: var(--primary);
   outline-width: 5px;
   outline-style: double;
-  margin: 75px;
+  margin: auto;
   border-top: 25px solid #6A5A85;
   background-color: rgb(196, 218, 246);
   text-decoration: none;
-  padding: 3%;
-  text-align: justify;
   max-width: fit-content;
   max-height: 100%; 
 }
@@ -382,12 +388,59 @@ body {
 .container-fluid {
   width: 92%;
 }
+/* navbar */
+.header{
+  border-bottom: 1px solid #E2E8F0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 10px;
+  z-index: 99;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-item {
+  margin-left: 5rem;
+}
+.nav-item a {
+  color: var(--quatrinary);
+  font-weight: bold;
+  margin: 0 10 0 10;
+}
+
+/* navbar end */
 /* footer */
 .footer {
   margin-top: 1rem;
   padding: 1rem;
   color: var(--light);
-  background-color: var(--primary);
+  background-color: var(--dark);
   position: fixed;
   bottom: 0;
   left: 0;
